--- a/templates/section.html
+++ b/templates/section.html
@@ -2,5 +2,20 @@
 
 <!-- Layout for all non-blog sections. -->
 {% block content %}
-{% include "partials/page-loop.html" %}
+{# {% include "partials/page-loop.html" %} #}
+
+{% if section.pages %}
+{% for page in section.pages %}
+<article class="post">
+    <a href="{{ page.permalink | safe }}">
+        <h1 class="post-title">{{ page.title | safe }}</h1>
+    </a>
+    {% if page.description %}
+    <p>{{ page.description | truncate(length=280) | safe }}</p>
+    {% endif %}
+    <a href="{{ page.permalink | safe }}" id="read-more">Read more…</a>
+</article>
+{% endfor %}
+{% endif %}
+
 {% endblock content %}
