--- a/templates/404.html
+++ b/templates/404.html
@@ -2,7 +2,7 @@
 
 <!-- Layout for the 404 error page. -->
 {% block content %}
-<article class="post">
+<article class="post1">
   <header>
     <h1>404: Page not found</h1>
   </header>
@@ -10,7 +10,7 @@
     The page or project you're looking for cannot be found!<br><br>
     Have a 404 derg instead:
   </div>
-  <pre>
+  <pre class="dragon">
                            ^\    ^
                           / \\  / \
                          /.  \\/   \      |\___/|
@@ -27,6 +27,6 @@
        ~.                 '-/        /.-~----.
          ~- _             /        >..----.\\\
              ~ - - - - ^}_ _ _ _ _ _ _.-\\\
-    </p>
+    </pre>
 </article>
 {% endblock content %}
