--- a/templates/blog.html
+++ b/templates/blog.html
@@ -10,12 +10,13 @@
     <a href="{{ page.permalink }}">
         <h1 class="post-title">{{ page.title | safe }}</h1>
     </a>
-    {# <time itemprop="datePublished" datetime="{{ page.date | safe }}">{{ page.date | date(format="%B %e, %Y") | safe }} •
+    {# <time itemprop="datePublished" datetime="{{ page.date | safe }}">{{ page.date | date(format="%B %e, %Y") | safe
+        }} •
         {{ page.reading_time }} minutes read</time> #}
     {% if page.description %}
     <p class="post-description">{{ page.description | safe }}</p>
     {% endif %}
-    {# <a href="{{ page.permalink | safe }}" id="continue-reading">Continue reading…</a> #}
+    <a href="{{ page.permalink | safe }}" id="continue-reading">Continue reading…</a>
 </article>
 {% endfor %}
 {% endif %}
