--- a/templates/post.html
+++ b/templates/post.html
@@ -2,7 +2,7 @@
 
 <!-- Layout for blog posts. -->
 {% block content %}
-<article class="post">
+<article class="post1">
   {# {% include "partials/breadcrumbs.html" %} #}
   <time itemprop="datePublished" datetime="{{ page.date | safe }}">{{ page.date | date(format="%B %e, %Y") | safe }} •
     {{
