--- a/templates/index.html
+++ b/templates/index.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" itemprop="about" content="{{config.description}}">
     <title>{{ config.title }}</title>
-    <link rel="stylesheet" href="{{ get_url(path='main-alt.css') | safe }}">
-    <!-- <link rel="stylesheet" href="{{ get_url(path='main.css') | safe }}"> -->
+    <link rel="stylesheet" href="{{ get_url(path='main.css') | safe }}">
 </head>
 
 <body>
