--- a/sass/main.scss
+++ b/sass/main.scss
@@ -34,10 +34,10 @@ main {
 aside#sidebar-right {
     grid-area: sidebar-right;
     width: vars.$sidebar-width;
-    
+
     position: sticky;
-    top: 1rem; /* The distance from the top of the viewport */
-    align-self: start; /* Ensures sticky works properly in a grid context */
+    top: 1rem;
+    align-self: auto;
 }
 footer {
     grid-area: footer;
@@ -48,15 +48,15 @@ main,
 aside {
     padding: 1rem;
 }
-footer,
-main,
-aside {
-    border: solid 1px;
-    border-radius: 5px;
-    border-bottom-color: #959da5;
-    box-shadow: inset 0px -1px 0px #959da5;
-    background: vars.$background-color;
-}
+// footer,
+// main,
+// aside {
+//     border: solid 1px;
+//     border-radius: 5px;
+//     border-bottom-color: #959da5;
+//     box-shadow: inset 0px -1px 0px #959da5;
+//     background: vars.$background-color;
+// }
 
 // @media screen and (min-width: 1001px) and (max-width: 1300px) {
 //     body {
@@ -277,4 +277,55 @@ hr {
 }
 main h2:first-child {
     margin-top: 0;
+}
+
+// Scroll to top button
+#goToTopBtn {
+    display: none;
+    position: fixed;
+    bottom: 1rem;
+    right: 1rem;
+    z-index: 100;
+    // background: vars.$background-color;
+    cursor: pointer;
+    font-size: 1.25rem;
+
+    border: 1px solid #959da5;
+    border-radius: 5px;
+    border-bottom-color: #959da5;
+    background-color: #f5f5f5;
+    color: #333;
+    padding: 10px 15px;
+    font-size: 18px;
+    cursor: pointer;
+    box-shadow: inset 0px -1px 0px #959da5;
+    transition:
+        background-color 0.3s,
+        transform 0.2s ease;
+}
+#goToTopBtn:hover {
+    background-color: #e1e4e8;
+}
+#goToTopBtn:hover:active {
+    transform: translateY(1px);
+    box-shadow: inset 0px 1px 0px #959da5;
+}
+
+footer,
+main,
+aside {
+    border: solid 1px;
+    border-radius: 5px;
+    border-bottom-color: #959da5;
+    box-shadow: inset 0px -1px 0px #959da5;
+    background: vars.$background-color;
+    background-color: #f5f5f5;
+
+    border: 1px solid #959da5;
+    border-radius: 5px;
+    border-bottom-color: #959da5;
+    box-shadow: inset 0px -1px 0px #959da5;
+    transition:
+        background-color 0.3s,
+        transform 0.2s ease;
 }
