bring back page title in sidebar

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -271,6 +271,9 @@ hr {
 .site-title {
     margin-top: 0;
 }
+.site-title-link {
+    text-decoration: none;
+}
 .dragon {
     background: white;
     line-height: 1.25;
