--- a/sass/main.scss
+++ b/sass/main.scss
@@ -43,51 +43,19 @@ footer {
     grid-area: footer;
     text-align: center;
 }
+footer a {
+    text-decoration: none;
+}
 
+header {
+    grid-area: header;
+}
+
+header,
 main,
 aside {
     padding: 1rem;
 }
-// footer,
-// main,
-// aside {
-//     border: solid 1px;
-//     border-radius: 5px;
-//     border-bottom-color: #959da5;
-//     box-shadow: inset 0px -1px 0px #959da5;
-//     background: vars.$background-color;
-// }
-
-// @media screen and (min-width: 1001px) and (max-width: 1300px) {
-//     body {
-//         display: grid;
-//         grid-template-columns: auto 1fr;
-//         grid-template-rows: auto 1fr auto;
-//         grid-template-areas:
-//             "sidebar-left main"
-//             "sidebar-right main"
-//             "footer footer";
-//     }
-// }
-// @media screen and (max-width: 1000px) {
-//     body {
-//         display: grid;
-//         grid-template-columns: auto auto;
-//         grid-template-rows: auto 1fr auto;
-//         grid-template-areas:
-//             "sidebar-left sidebar-right"
-//             "main main"
-//             "footer footer";
-//     }
-//     aside#sidebar-left {
-//         grid-area: sidebar-left;
-//         width: unset;
-//     }
-//     aside#sidebar-right {
-//         grid-area: sidebar-right;
-//         width: unset;
-//     }
-// }
 
 // Tables
 table {
@@ -113,6 +81,9 @@ table td {
     flex-direction: column;
     gap: 0.75rem;
     list-style-type: none;
+}
+.sidebar-nav a {
+    text-decoration: none;
 }
 
 // Category Lists
@@ -219,7 +190,6 @@ pre code {
 // Blog post reading time
 time {
     font-size: 0.9rem;
-    // margin-top: 0;
 }
 
 // Quotes
@@ -314,6 +284,7 @@ main h2:first-child {
     box-shadow: inset 0px 1px 0px #959da5;
 }
 
+header,
 footer,
 main,
 aside {
@@ -331,4 +302,50 @@ aside {
     transition:
         background-color 0.3s,
         transform 0.2s ease;
+}
+
+header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+header .site-title {
+    margin-bottom: 0;
+    font-size: 1.5rem;
+}
+
+.site-nav {
+    display: flex;
+    gap: 1rem;
+    list-style: none;
+    margin-top: 0;
+    margin-bottom: 0;
+}
+.site-nav a {
+    text-decoration: none;
+}
+
+@media screen and (max-width: 1000px) {
+    body {
+        display: grid;
+        grid-template-columns: auto;
+        grid-template-rows: auto auto 1fr auto;
+        grid-template-areas:
+            "sidebar-left"
+            "sidebar-right"
+            "main"
+            "footer";
+    }
+    aside#sidebar-left {
+        // grid-area: sidebar-left;
+        width: unset;
+    }
+    aside#sidebar-right {
+        // grid-area: sidebar-right;
+        width: unset;
+    }
+    .page-title,
+    .section-title {
+        display: none;
+    }
 }
